internal/gatewayapi/testdata/envoyextensionpolicy-with-extproc-with-hc-log.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    telemetry:
      healthCheckLog: {}
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: default
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - www.foo.com
    parentRefs:
    - namespace: default
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: /foo
      backendRefs:
      - name: service-1
        port: 8080
services:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: grpc-backend
  spec:
    ports:
    - port: 8000
      name: grpc
      protocol: TCP
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: service-1
  spec:
    ports:
    - port: 8080
      name: http
      protocol: TCP
endpointSlices:
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-grpc-backend
    namespace: default
    labels:
      kubernetes.io/service-name: grpc-backend
  addressType: IPv4
  ports:
  - name: grpc
    protocol: TCP
    port: 8000
  endpoints:
  - addresses:
    - 1.2.3.4
    conditions:
      ready: true
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-service-1
    namespace: default
    labels:
      kubernetes.io/service-name: service-1
  addressType: IPv4
  ports:
  - name: http
    protocol: TCP
    port: 8080
  endpoints:
  - addresses:
    - 7.7.7.7
    conditions:
      ready: true
envoyExtensionPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    namespace: default
    name: policy-for-http-route
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
    extProc:
    - backendRefs:
      - name: grpc-backend
        namespace: default
        port: 8000
      backendSettings:
        healthCheck:
          active:
            type: GRPC
            grpc:
              service: envoy.service.ext_proc.v3.ExternalProcessor
            interval: 5s
            timeout: 500ms
            unhealthyThreshold: 3
            healthyThreshold: 1
